<resources>
    <string name="app_name">Bümerang</string>
    <string name="facebook_app_id">1614053472225944</string>

    // if your App ID is 1234567, you should use fb1234567
    <string name="fb_login_protocol_scheme">fb1614053472225944</string>
    <string name="covered_you_message">%1$s\'s got you covered!</string>
    <string name="covered_them_message">You\'ve got %1$s covered!</string>
    <string name="responded_message">%1$s will be in touch!</string>
    <string name="button_start_lending">Start Lending</string>
    <string name="button_accept_offer">Accept Offer</string>
    <string name="error_message">Oops! Something went wrong. Please try again!</string>
    <string name="button_skip">skip</string>

    <string name="title_activity_nav_drawer">Bümerang</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="borrow_tab">I need it!</string>
    <string name="borrow_tab_title">I NEED IT</string>
    <string name="lend_tab">I have it!</string>
    <string name="lend_tab_title">I HAVE IT</string>

    <string name="dialog_got_it">Got it!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_test_fragment">Hello TEST fragment</string>
    <string name="browse_text">G\'day</string>
    <string name="details">DETAILS</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="welcome">Welcome to Bümerang!</string>
    <string name="welcome_info">Hey, thank you for signing up! You\'re almost ready, just a few things you should know:</string>
    <string name="beta_notice">Notice: Bümerang is in Beta! Cool, huh? That means some things might not work. But\nwe\'re working on it, don\'t worry</string>
    <string name="important_info">
        -Bümerang is an app for the short term exchange of things. This means you will be responsible for your own things, and doubly responsible for
        other\'s things.
        \n\n-Be responsible with your stuff. Trust your gut. Don\'t lend out more than what you are comfortable with.
        \n\n-Be responsible with other people\'s things.
        \n\n-We aren\'t responsible for theft or loss of property. But it\'s our goal to make it as safe as possible to lend and borrow.
        \n\n**  Privacy  **
        \n\n-Bümerang accesses Facebook for authorization, to set up your basic profile, and, if you wish, to share requests to your timeline.
        \n\n-Basic analytics are gathered using Google Analytics, Firebase and Facebook.
        \n\n-We make use of notifications on your phone.
        \n\n-Note that we take your privacy very seriously.
        \n\n**  Notice  **
        \n\n-We\'re currently in Beta - that means you\'re a Beta user!\nThat also means some things
        may not work perfectly. If you discover anything strange, or if you\'d just like to drop by
        and leave a comment, feel free to contact us! Our contact details are listed at http//www.bumerangapp.com
    </string>

    <string name="walkthrough_phone_title">Enter a Phone Number</string>
    <string name="phone_number_explanation_expanded">
        Bümerang requires a phone number. This is how you\'ll get in contact with people in order to lend and borrow, so we\'d
        strongly encourage you to input a valid number.\n
        It\'s not public information; you will be always be asked to confirm before it is shared.
    </string>

    <string name="walkthrough_extra_info_title">Extra Information (optional)</string>
    <string name="extra_info_explanation">You\'re all done. Happy sharing!</string>

    <string name="phone_number_explanation">A phone number is needed to borrow and lend. You will always be notified before it is shared.</string>

    <string name="empty_needs_message">Guess nobody needs anything right now!</string>
    <string name="empty_has_message">Looks like nobody has anything to lend!\n Wanna lead the way?</string>
    <string name="empty_my_needs_message">Hey, guess you don\'t need anything?</string>
    <string name="empty_my_has_message">Looks like you don\'t have anything to lend!</string>
    <string name="empty_request_field_message">Looks like you forgot to fill in a field!</string>
    <string name="empty_phone_number_message">You forgot your phone number! You\'ll need it to lend and borrow.</string>
    <string name="invalid_phone_number_message">That phone number isn\'t valid. You\'ll need a valid one to lend and borrow!</string>
    <string name="error_in_finding_profile">Sorry, an error has occurred.</string>

    <string name="no_internet_connection_generic">We weren\'t able to connect to the internet. Please try again!</string>
    <string name="no_internet_connection_create_request">We weren\'t able to connect to the internet, so we couldn\'t create your request. Please try again!</string>
    <string name="no_internet_connection_update_profile">We weren\'t able to connect to the internet, so we couldn\'t update your profile. Please try again!</string>
    <string name="unable_to_create_request">We weren\'t able to create your request. Please try again!</string>
    <string name="unable_to_display_requests">Something went wrong! We\'re unable to show any requests.</string>
    <string name="unable_to_update_profile">Oops, we weren\'t able to update your profile. Please try again.</string>
    <string name="created_request">Request created!</string>
    <string name="updated_profile">Your profile has been successfully updated!</string>
    <string name="facebook_first_name">First Name</string>

    <string name="unable_to_display_request_detail">Sorry, we weren\'t able to get the details of that request. Please try again!</string>
    <string name="unable_to_accept_own_request">Sorry, you can\'t accept your own request.</string>
    <string name="unable_to_accept_request_again">That\'s very kind of you, but you can\'t accept the same request twice!</string>

    <string-array name="distance_array">
        <item>km</item>
        <item>m</item>
    </string-array>

    <string name="title_activity_browse_tabs">BrowseTabs</string>

    <string name="expand_advanced_options">more options</string>
    <string name="hide_advanced_options">hide</string>

    <string name="delete_request_title">Delete request</string>
    <string name="delete_request_message">Are you sure you want to delete this request?</string>
    <string name="delete_request_success_message">Request successfully deleted!</string>
    <string name="delete_request_fail_message">Unable to delete request. Please try again!</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="going_back_in_time_toast">"Time travel not yet supported.</string>
    <string name="going_back_in_time_message">Your request will be set for 2 hours.</string>
    <string name="post_to_facebook_message_borrow">Post your request to Facebook</string>
    <string name="post_to_facebook_message_lend">Post your offer to Facebook</string>

    <string name="karma_help_title">What is this?</string>
    <string name="karma_explanation">This is your karma. Karma let\'s other users immediately know how
        reliable you are. You gain karma when you lend and borrow items, returning them on time. You lose
        karma when you don\'t return items on time.</string>
    <string name="happy_sharing">Happy Sharing!</string>

    <string name="notifications_on"> Notifications turned on! </string>
    <string name="notifications_off"> Notifications turned off! </string>
    <string name="notification_name"> Notifications </string>

</resources>
