<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/blue_pressed_rectangle">


    <TextView
        android:id="@+id/title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/karma_help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blue_text"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/body"
        android:text="@string/karma_explanation"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:textColor="@color/blue_text"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/finalRemarks"
        android:text="@string/happy_sharing"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/body"
        android:gravity="center"
        android:textColor="@color/blue_text"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>