<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/bumerang_nobackground"/>

        <TextView
            android:id="@+id/welcome_lowerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/welcome_info"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fillViewport="false"
            android:elevation="3dp"
            android:background="@color/light_gray">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/important_info"/>

        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/welcome_buttonContinue"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="Get Started"/>
    </LinearLayout>

</ScrollView>